# fore

./: .gitignore  .pylintrc  LICENSE  README.md  api_v1.yaml  pyproject.toml
.github/workflows/: build-test-lint.yml
fore/foresight/: __init__.py  api_v1.yaml  client.py  client_test.py  schema.py  utils.py
